# quirk

./: .gitattributes  .gitignore  COMMANDS.md  INSTALL.md  PACKAGES.md  README.md  STDLIB.md  SYNTAX.md  install.sh  test_output.txt
quirk-compiler/: CHANGELOG.md  CMakeLists.txt  Makefile  README.md  RELEASE_NOTES_v3.0.0.md  data.csv  output.ll  setup.sh  vcpkg.json
quirk-compiler/docs/stdlib/: argparse.md  console.md  crypto.md  csv.md  datetime.md  debug.md  encoding.md  fs.md  html.md  index.md  io.md  itertools.md  math.md  net.md  prompt.md  random.md  regex.md  statistics.md  sys.md  test.md  time.md  toml.md  typing.md  url.md  uuid.md
quirk-compiler/include/: ast.hpp  lexer.hpp  parser.hpp  sema.hpp
quirk-compiler/libs/argparse/: index.qk  index.quirk
quirk-compiler/libs/console/: index.qk  index.quirk
quirk-compiler/libs/core/: __init.qk  callable.qk  primitives.qk  string.qk  sys.qk
quirk-compiler/libs/csv/: index.qk  index.quirk
quirk-compiler/libs/datetime/: index.quirk
quirk-compiler/libs/encoding/: __init.qk  base64.qk  base64.quirk  hex.qk  index.quirk  json.qk  json.quirk
quirk-compiler/libs/fs/: index.qk  index.quirk
quirk-compiler/libs/io/: __init.qk  file.qk  index.quirk
quirk-compiler/libs/itertools/: index.quirk
quirk-compiler/libs/math/: __init.qk  index.qk  index.quirk  vectors.qk  vectors.quirk
quirk-compiler/libs/net/: __init.qk  http.qk  socket.qk
quirk-compiler/libs/random/: index.quirk
quirk-compiler/libs/regex/: index.qk
quirk-compiler/libs/statistics/: index.quirk
quirk-compiler/libs/sys/: __init.qk  index.qk  index.quirk
quirk-compiler/libs/test/: index.qk
quirk-compiler/libs/time/: index.qk
quirk-compiler/libs/typing/: __init.qk  bool.qk  callable.qk  char.qk  double.qk  index.qk  int.qk  primitives.qk  string.qk
quirk-compiler/libs/url/: index.quirk
quirk-compiler/libs/uuid/: index.quirk
quirk-compiler/selfhost/: README.md  ast.quirk  build.quirk  codegen.quirk  codegen_e2e.sh  codegen_test.quirk  lexer.quirk  lexer_test.golden  lexer_test.quirk  parser.quirk  parser_test.quirk  quirk-driver.sh  quirk_main.quirk  sema.quirk  sema_test.quirk  tokens.quirk  types.quirk
quirk-compiler/src/: Compiler.cpp  PackageManager.hpp
quirk-compiler/src/Backend/: BoxInt.hpp  BuiltinGen.cpp  BuiltinGen.hpp  Codegen.cpp  ControlFlowGen.cpp  ControlFlowGen.hpp  EnumGen.hpp  MathGen.cpp  MathGen.hpp  StructGen.cpp  StructGen.hpp  TypeExtensions.cpp  TypeExtensions.hpp  TypeGen.cpp  TypeGen.hpp  VariableGen.cpp  VariableGen.hpp
quirk-compiler/src/Core/: Lexer.cpp  Parser.cpp  Sema.cpp
quirk-compiler/src/Modules/: ApexModule.hpp  ModuleRegistry.cpp  QuirkModule.hpp  StdExceptions.cpp  StdFile.cpp  StdList.cpp  StdMap.cpp  StdMath.cpp  StdPrimitives.cpp  StdString.cpp
quirk-compiler/src/Runtime/: runtime.c  selfhost_aliases.c  types.h
quirk-compiler/stdlib/math/: vectors.qk
quirk-compiler/stdlib/std/: init.qk  string.qk
quirk-compiler/tests/: alias_import_test.qk  argparse_test.quirk  cast_where_test.qk  cast_where_test.quirk  compiler_errors_test.sh  comprehensions_test.quirk  console_test.quirk  crypto_test.qk  crypto_test.quirk  csv_test.qk  csv_test.quirk  custom_package_test.qk  custom_package_test.quirk  datetime_test.quirk  debug_step_test.quirk  debug_test.quirk  decorators_test.qk  encoding_test.qk  encoding_test.quirk  enum_backed_test.quirk  enum_test.qk  enum_test.quirk  exception_improvements_test.qk  exception_improvements_test.quirk  exceptions_full_test.qk  exceptions_full_test.quirk  exceptions_test.qk  exceptions_test.quirk  fs_test.quirk  fstring_fmt_test.quirk  ftf_imports.qk  ftf_imports.quirk  gc_test.qk  gc_test.quirk  generics_interfaces.qk  global_keyword_test.quirk  greet_lib.quirk  http_client_test.quirk  http_server_test.quirk  http_test.qk  (+53 more)
quirk-compiler/tests/fixtures/: httpbin_lite.py  run_http_tests.sh
quirk-compiler/tests/probes/: README.md  p01_any_to_set.quirk  p02_any_to_queue.quirk  (+80 more)
quirk-compiler/tools/: fuzz.py  gen_stdlib_docs.py
(+92 files in other folders)
